Fixed map overlap issue: map now goes below navbar

--- a/css/mapstyle.css
+++ b/css/mapstyle.css
@@ -1,9 +1,15 @@
+/* NAVIGATION BAR */
+#div_navbar {
+    z-index: 1;
+}
+
 /* MAP */
 #map {
-        height: 500px;
-        top: 100px;
-        width: 100%;
-       }
+    height: 500px;
+    top: 100px;
+    width: 100%;
+    z-index: 0;
+}
 
 /* MODAL */
 .modal {
